--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -19,6 +20,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
+    "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1",
     "sharp": "^0.32.6",
     "sharp-multer": "^0.3.0"
